# rpi_todo

./: Cargo.toml  README.md  tasks.json
locales/de/: main.ftl
locales/en-US/: main.ftl
locales/es/: main.ftl
locales/fr/: main.ftl
locales/ja/: main.ftl
locales/ru/: main.ftl
src/: error.rs  main.rs  tasks.rs
tests/: todo_integration_test.rs
