[package]
name = "rpi_todo"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = {version = "4.0", features = ["derive"] }
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
fluent = "0.16"
fluent-templates = "0.8"
once_cell = "1.18"
unic-langid = "0.9"
confy = "0.6"

[[bin]]
name = "rpi_todo"
test = false
